--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "spark-sight"
-version = "0.1.3"
+# TODO update __version__
+version = "0.1.4"
 description = "Spark performance at a glance"
 authors = ["Alfredo Fomitchenko <alfredo.fomitchenko@mail.polimi.it>"]
 
@@ -8,6 +9,7 @@ authors = ["Alfredo Fomitchenko <alfredo.fomitchenko@mail.polimi.it>"]
 python = "^3.6"
 pandas = ">=1.1,<=1.4.2"
 plotly = ">=5,<=5.7.0"
+requests = "<=2.27.1"
 
 [tool.poetry.scripts]
 spark-sight = 'spark_sight.execute:main_cli'
