--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.6"
 pandas = ">=1.1,<=1.4.2"
 plotly = ">=5,<=5.7.0"
 requests = "<=2.27.1"
+dash = ""
+dash-bootstrap-components = ""
 
 [tool.poetry.scripts]
 spark-sight = 'spark_sight.execute:main_cli'
