--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ python = "^3.6"
 pandas = ">=1.1,<=1.4.2"
 plotly = ">=5,<=5.7.0"
 requests = "<=2.27.1"
-dash = ">=0.39.0"
+# Multi output callbacks
+# dash = ">=0.39.0"
+# ctx
+dash = ">=2.4.0"
 dash-bootstrap-components = ""
 
 [tool.poetry.scripts]
